web-window.css
#before-node {
  display: hidden;
  height: 0px; width: 0px;
  position: absolute;
  margin: 0; padding: 0;
}

.web-window-invisible {
  display: none;
  opacity: 0;
}

.task-frame-window-border {
  position: fixed;
  min-height: 200px;
  min-width: 250px;
  background: transparent;
  display: inline-block;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 100 !important;
}

.task-frame-window-border::after {
  display: block;
  clear: both;
  position: relative;
  content: '';
}
.task-frame-header {
  margin: 0;
  padding: 0;
  top: 0;
  z-index: 200;
}
.task-frame-buttons {
  position: absolute;
  right: 0; top: 0;
  display: inline-block;
}
.task-frame-buttons li {
  position: relative;
  float: left;
  clear: none;
  z-index: 300;
  display: block;
  right: 0; left: auto;
  text-align: center;
  font-size: 1rem;
  font-weight: bold;
  transition: background .25s ease-in-out,
      color .25s ease-in-out;
}

.task-frame-content-border {
  position: absolute;
  top: 0px;
  left: -1px;
  padding: 0;
  margin: 0;
  height: 100%; width: 100%;
  overflow: hidden;
}
.task-frame-content {
  position: absolute;
  margin: 0; padding: 0;
  z-index: 100;
  display: flex;
  flex: 1;
  flex-grow: 1;
  top: 0; left: 0;
  bottom: 0; right: 0;
  overflow-x: auto;
  overflow-y: auto;
}
.task-frame-content::after {
  content: '';
  position: relative; 
  display: block;
  clear: both;
}
.task-frame-dragbar {
  position:absolute;
  display: block;
  top: 0; left: 0;
  bottom: 0; right: 0;
  margin: 0; padding: 0;
  z-index: 110 !important;
  background: transparent;
}
.task-frame-window-title {
  background: transparent;
  position:relative;
  max-width: 100%;
  max-height: 100%;
  margin: 0;
  z-index: 90 !important;
}
.task-frame-resize {
  position: absolute;
  display: block;
  height: 100%;
  width: 100%;
  top: -8px;
  left: -8px;
  content: ' ';
  padding: 8px;
  margin: 0;
  z-index: 80;
}
.web-window-resizer {
  position: absolute;
  border: 0;
  margin: 0;
  background: transparent !important;
  z-index: 10;
}
.web-window-resize-top {
  height: 8px;
  top: -2px;
  left: 0px;
  width: 100%;
  background: red;
}

.web-window-resize-left {
  width: 8px;
  top: -2px;
  height: 100%;
  left: -1px;
  background:tan;
}
.web-window-resize-right {
  width: 8px;
  top: -1px;
  right: -1px;
  height: 100%;
  background: green;
}
.web-window-resize-bottom {
  width: 100%;
  bottom: -1px;
  height: 8px;
  left: 0;
  background: blue;
}
.web-window-resize-top-left {
  height: 8px; width: 8px;
  top: -1px; left: -1px;
}
.web-window-resize-top-right {
  height: 8px; width: 8px;
  top: -1px; right: -1px;
  background: cyan;
}
.web-window-resize-bottom-right {
  height: 8px; width: 8px;
  bottom: 0px; right: -1px;
  background: magenta;
}
.web-window-resize-bottom-left {
  background: black;
  height: 8px; width: 8px;
  bottom: 0px; left: -2px;
}

.task-frame-window-border.web-window-maximize {
  height: 100% !important;
  width: 100% !important;
  top: 42px !important;
  left: 0 !important;
  margin:0;
}

.task-frame-window-border.web-window-minimize {
  height: 0px !important;
  width: 0px !important;
  top: 0 !important;
  left: 0 !important;
  min-width: 0 !important;
  min-height: 0 !important;
  border: 0 none;
  box-shadow: 0 0 0 0 transparent;
  overflow:hidden !important;
}

#web-window-taskbar {
  position: fixed;
  display: flex;
  flex: 1;
  flex-grow: 1;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 2000;
}
#web-window-taskbar li {
  display: flex;
  flex: 1;
  flex-grow: 1;
  max-width: 99%;
  max-height: 100%;
}

#web-window-desktop {
  margin-top: 0;
  position: fixed;
  display: flex;
  flex: 1;
  flex-grow: 1;
  max-width: 100%;
  max-height: 100%;
  bottom: 0;
  left: 0;
  right: 0;
}

#web-window-main-menu {
  position: fixed;
  display: block;
  overflow: visible;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
}
#web-window-main-menu > * {
  z-index: 100;
}
#web-window-main-menu span {
  position: absolute;
  display: flex;
  flex: 1;
  flex-grow: 1;
  right: 0; left: 0; top: 0; bottom: 0;
  padding-top: 0.75rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

